<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#395682"
    android:orientation="vertical"
    tools:context=".login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                app:srcCompat="@drawable/ic_show_chart_black_24dp" />



            <EditText
                android:id="@+id/usernl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:drawableLeft="@drawable/ic_action_user"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:scrollbarDefaultDelayBeforeFade="500"
                android:selectAllOnFocus="false"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/userpl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_action_password"
                android:ems="10"
                android:maxLength="4"
                android:gravity="center"
                android:hint="pin"
                android:inputType="numberPassword|textCapCharacters"
                android:password="true"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btnl"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:foregroundGravity="center"
                app:cardBackgroundColor="#ba6e16"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/logintext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:foregroundGravity="center"
                        android:text="@string/login"
                        android:textColor="#fff"
                        android:textSize="30sp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:soundEffectsEnabled="true"
                android:text="@string/signup"
                android:textSize="24sp"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:soundEffectsEnabled="true"
                android:textColor="#fff"
                android:text="forgot password"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>




</ScrollView>
