<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#395682"
    android:orientation="vertical"
    tools:context=".signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_show_chart_black_24dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="name"
        android:inputType="textPersonName"
        android:textColor="#fff"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center"
        android:hint="@string/email"
        android:textColor="#fff"
        android:inputType="textEmailAddress"
        android:textColorHint="#fff" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="pin"
                android:inputType="numberPassword"
                android:textColor="#fff"
                android:textColorHint="#fff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:text="4 digit pin"
                android:textColor="#fff"
                android:drawableLeft="@drawable/ic_action_info"
                android:textStyle="bold">

            </TextView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="confirm pin"
        android:textColor="#fff"
        android:inputType="numberPassword"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:drawableRight="@drawable/ic_action_date"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/dateofbirth"
        android:textColor="#fff"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/ques"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:textColor="#fff"
        android:gravity="center"
        android:hint="security question"
        android:inputType="textPersonName"
        android:textColorHint="#fff" />

    <EditText
        android:id="@+id/ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#fff"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="security answer"
        android:inputType="textPersonName"
        android:textColorHint="#fff" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:foregroundGravity="center"
        app:cardBackgroundColor="#ba5e16"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/cardviewtxt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="#fff"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#fff"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>
